<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            tools:context=".about_screen.AboutFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/aboutConstraintLayout">
        <TextView
                android:text="@string/about_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/aboutTitle" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="25dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="50dp" android:layout_marginTop="88dp"
                app:layout_constraintTop_toTopOf="parent" android:textColor="@android:color/background_dark"
                android:fontFamily="@font/advent_pro_thin" android:textAlignment="center" android:textStyle="bold"
                android:textSize="30sp" app:layout_constraintHorizontal_bias="0.022"/>
        <TextView
                android:text="@string/about_first_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/aboutFirstBlock"
                android:layout_marginTop="60dp"
                app:layout_constraintTop_toBottomOf="@+id/aboutTitle" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="25dp"/>
        <TextView
                android:text="@string/about_second_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/aboutSecondTitle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="25dp" android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/aboutFirstBlock" android:fontFamily="@font/advent_pro_thin"
                android:textSize="24sp"/>
        <TextView
                android:text="@string/about_second_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/aboutSecondBlock"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp" android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/aboutSecondTitle"/>
        <TextView
                android:text="@string/about_third_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/aboutThirdTitle"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/aboutSecondBlock"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="25dp"
                android:textSize="24sp" android:fontFamily="@font/advent_pro_thin"/>
        <TextView
                android:text="@string/about_third_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/aboutThirdBlock"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/aboutThirdTitle" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="30dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>